Adds likelihood computation and systematic corrections for Pk.

--- a/pipeline.ini
+++ b/pipeline.ini
@@ -3,13 +3,13 @@ sampler = test
 root = ${COSMOSIS_SRC_DIR}
 
 [test]
-save_dir = ./
+save_dir = ./out/
 fatal_errors = T
 
 [pipeline]
-modules = bao_pk legendre
+modules = bao_pk legendre pk_like
 values = bao_parameters.ini
-likelihoods = 
+likelihoods = bao
 extra_output = 
 quiet=F
 debug=T
@@ -26,8 +26,12 @@ nmu = 1000
 bao_template_fname = ${DATA_PATH}/pk_bao_template_z0p0_v0p0_bautista.dat
 no_wiggle_template_fname = ${DATA_PATH}/pk_nw_template_z0p0_v0p0_bautista.dat
 
-
 [legendre]
 file = ${CODE_PATH}/legendre.py
-max_multipole = 4
+max_multipole = 2
+
+[pk_like]
+file = ${CODE_PATH}/pk_like.py
+pk_fname = ${DATA_PATH}/fiducial_pk_multipoles-sigma_fog2p0-sigma_par9p5-sigma_perp6p0-sigma_rec0p0-bias1p0-alpha_par1p2-alpha_perp1p2-f0p2.txt
+cov_fname = ${DATA_PATH}/Stage0/Pk_multipoles_cov_BAO_fitting_DC.v0.dat
 
