--- a/bao_parameters.ini
+++ b/bao_parameters.ini
@@ -4,7 +4,14 @@ sigma_par = 9.5
 sigma_perp = 6.0
 sigma_rec = 0.
 bias = 1.
-alpha_par = 1.1
-alpha_perp = 1.1
+alpha_par = 1.2
+alpha_perp = 1.2
 growth_factor = 0.2
 
+[systematics_parameters]
+a0_l0 = 0.
+a1_l0 = 0.
+a2_l0 = 0.
+a0_l2 = 0.
+a1_l2 = 0.
+a2_l2 = 0.
