Moves template generation/loading to its own module.

--- a/config/pipeline.ini
+++ b/config/pipeline.ini
@@ -7,7 +7,7 @@ save_dir = ./out/
 fatal_errors = T
 
 [pipeline]
-modules = bao_pk legendre pk_like
+modules = template bao_pk legendre pk_like
 values = bao_parameters.ini
 likelihoods = bao
 extra_output = 
@@ -15,14 +15,19 @@ quiet=F
 debug=T
 timing=F
 
+[template]
+file = ${CODE_PATH}/template.py
+bao_template_fname = ${DATA_PATH}/pk_bao_template_z1p0_v0p0.dat
+no_wiggle_template_fname = ${DATA_PATH}/pk_nw_template_z1p0_v0p0.dat
+output_no_wiggle_template_fname = ./pk_nw_template.dat
+output_bao_template_fname = ./pk_bao_template.dat
+
 [bao_pk]
 file = ${CODE_PATH}/bao-pkmu.py
 kmin = 1e-3
 kmax = 0.5
 nk = 2048
 nmu = 1000
-bao_template_fname = ${DATA_PATH}/pk_bao_template_z1p0_v0p0.dat
-no_wiggle_template_fname = ${DATA_PATH}/pk_nw_template_z1p0_v0p0.dat
 
 [legendre]
 file = ${CODE_PATH}/legendre.py
