Implements loading linear pk from datablock.

--- a/config/pipeline.ini
+++ b/config/pipeline.ini
@@ -7,7 +7,7 @@ save_dir = ./out/
 fatal_errors = T
 
 [pipeline]
-modules = template bao_pk legendre pk_like
+modules = consistency camb template bao_pk legendre pk_like
 values = bao_parameters.ini
 likelihoods = bao
 extra_output = 
@@ -15,9 +15,32 @@ quiet=F
 debug=T
 timing=F
 
+[consistency]
+file = cosmosis-standard-library/utility/consistency/consistency_interface.py
+
+[camb]
+file = cosmosis-standard-library/boltzmann/camb/camb.so
+mode = all
+lmax = 2600             ;max ell to use for cmb calculation
+feedback = 2            ;amount of output to print
+
+accuracy_boost=1.1      ;CAMB accuracy boost parameter
+high_acc_default=true   ;high accuracy is required w/ Planck data
+kmin = 1e-5
+kmax = 1.0              ;max k - matter power spectrum
+nk = 5000
+zmin = 0.0              ;min value to save P(k,z)
+zmax = 4.0              ;max value to save P(k,z) 
+nz = 17                 ;number of z values to save P(k,z) 
+do_tensors = false      ;include tensor modes
+do_lensing = true       ;lensing is required w/ Planck data
+high_ell_template = $COSMOSIS_SRC_DIR/cosmosis-standard-library/boltzmann/camb/camb_Jan15/HighLExtrapTemplate_lenspotentialCls.dat
+matter_power_lin_version = 1
+
 [template]
 file = ${CODE_PATH}/template.py
-bao_template_fname = ${DATA_PATH}/pk_bao_template_z1p0_v0p0.dat
+z = 1.
+;bao_template_fname = ${DATA_PATH}/pk_bao_template_z1p0_v0p0.dat
 no_wiggle_template_fname = ${DATA_PATH}/pk_nw_template_z1p0_v0p0.dat
 output_no_wiggle_template_fname = ./pk_nw_template.dat
 output_bao_template_fname = ./pk_bao_template.dat
