--- a/config/bao_parameters.ini
+++ b/config/bao_parameters.ini
@@ -15,3 +15,22 @@ a2_l0 = 0.
 a0_l2 = 0.
 a1_l2 = 0.
 a2_l2 = 0.
+
+[cosmological_parameters]
+h0 = 0.6726           ;H0 (km/s/Mpc)/100.0km/s/Mpc 
+;omega_m = 0.3141     ;density fraction for matter today
+;omega_b = 0.04       ;density fraction for baryons today
+omch2 = 0.12400       ;physical density fraction for cold dark matter today
+ombh2 = 0.01809       ;physical density fraction for baryon today
+omega_k = 0.0         ;spatial curvature
+yhe = 0.245341        ;helium mass fraction
+
+tau = 0.08            ;reionization optical depth
+
+n_s = 0.96            ;scalar spectral index
+A_s = 2.1e-9          ;scalar spectrum primordial amplitude
+k_s = 0.05            ;Power spectrum pivot scale 
+n_run = 0.0           ;running of scalar spectrum 
+
+w = -1.0              ;equation of state of dark energy
+wa = 0.0              ;equation of state of dark energy (redshift dependency)
