Implements loading nw pk from datablock.

--- a/config/pipeline.ini
+++ b/config/pipeline.ini
@@ -41,7 +41,7 @@ matter_power_lin_version = 1
 file = ${CODE_PATH}/template.py
 z = 1.
 ;bao_template_fname = ${DATA_PATH}/pk_bao_template_z1p0_v0p0.dat
-no_wiggle_template_fname = ${DATA_PATH}/pk_nw_template_z1p0_v0p0.dat
+;no_wiggle_template_fname = ${DATA_PATH}/pk_nw_template_z1p0_v0p0.dat
 output_no_wiggle_template_fname = ./pk_nw_template.dat
 output_bao_template_fname = ./pk_bao_template.dat
 
