--- a/config/pipeline.ini
+++ b/config/pipeline.ini
@@ -44,6 +44,7 @@ z = 1.
 ;no_wiggle_template_fname = ${DATA_PATH}/pk_nw_template_z1p0_v0p0.dat
 output_no_wiggle_template_fname = ./pk_nw_template.dat
 output_bao_template_fname = ./pk_bao_template.dat
+spline_residual_broadband = T
 
 [bao_pk]
 file = ${CODE_PATH}/bao-pkmu.py
