Fix examples and adds README.

--- a/config/pipeline.ini
+++ b/config/pipeline.ini
@@ -1,15 +1,43 @@
 [runtime]
-sampler = test
+sampler = minuit
+;sampler = fisher
+;sampler = emcee
+;sampler = test
 root = ${COSMOSIS_SRC_DIR}
 
 [test]
 save_dir = ./out/
 fatal_errors = T
 
+[emcee]
+walkers = 100
+samples = 50000
+nsteps = 10
+
+[fisher]
+step_size=0.001
+
+[minuit]
+maxiter = 100000
+output_ini = ./minuit_bestfit_run0.txt
+save_cov = ./minuit_cov_run0.txt
+verbose = T
+
+[output]
+filename = minuit_run0.txt
+;filename = fisher_run0.txt
+;filename = emcee_run0.txt
+;filename = test_run0.txt
+format = text
+verbosity = debug
+
 [pipeline]
 modules = consistency camb template bao_pk legendre pk_like
 values = bao_parameters.ini
+;values = minuit_bestfit_run0.txt
+priors = priors.ini
 likelihoods = bao
+shortcut = bao_pk                                             ;computes template only once
 extra_output = 
 quiet=F
 debug=T
@@ -21,44 +49,52 @@ file = cosmosis-standard-library/utility/consistency/consistency_interface.py
 [camb]
 file = cosmosis-standard-library/boltzmann/camb/camb.so
 mode = all
-lmax = 2600             ;max ell to use for cmb calculation
-feedback = 2            ;amount of output to print
-
-accuracy_boost=1.1      ;CAMB accuracy boost parameter
-high_acc_default=true   ;high accuracy is required w/ Planck data
+lmax = 2600
+feedback = 2
+accuracy_boost=1.1
+high_acc_default=true
 kmin = 1e-5
-kmax = 1.0              ;max k - matter power spectrum
+kmax = 1.0
 nk = 5000
-zmin = 0.0              ;min value to save P(k,z)
-zmax = 4.0              ;max value to save P(k,z) 
-nz = 17                 ;number of z values to save P(k,z) 
-do_tensors = false      ;include tensor modes
-do_lensing = true       ;lensing is required w/ Planck data
+zmin = 0.9872                                                 ;min value to save P(k,z)
+zmax = 0.9874                                                 ;max value to save P(k,z) 
+nz = 3                                                        ;number of z values to save P(k,z) 
+do_tensors = false
+do_lensing = true
 high_ell_template = $COSMOSIS_SRC_DIR/cosmosis-standard-library/boltzmann/camb/camb_Jan15/HighLExtrapTemplate_lenspotentialCls.dat
 matter_power_lin_version = 1
 
+; Template calculation/loading
 [template]
 file = ${CODE_PATH}/template.py
-z = 1.
-;bao_template_fname = ${DATA_PATH}/pk_bao_template_z1p0_v0p0.dat
-;no_wiggle_template_fname = ${DATA_PATH}/pk_nw_template_z1p0_v0p0.dat
-output_no_wiggle_template_fname = ./pk_nw_template.dat
-output_bao_template_fname = ./pk_bao_template.dat
-spline_residual_broadband = T
+z = 0.9873                                                    ;redshift to compute templates
+;no_wiggle_template_fname = ${DATA_PATH}/Pk_nowiggle.txt      ;optional no wiggle template filename
+;bao_template_fname = ${DATA_PATH}/Pk_Planck15_Table4.txt     ;optional linear template filename
+output_no_wiggle_template_fname = ./pk_nw_template.dat        ;filename to save computed no wiggle template
+output_bao_template_fname = ./pk_bao_template.dat             ;filename to save computed linear template
+spline_residual_broadband = T                                 ;if T, fits spline to linear - E&H template
 
+; Beutler et. al. 17' model for P(k,mu)
 [bao_pk]
 file = ${CODE_PATH}/bao-pkmu.py
 kmin = 1e-3
 kmax = 0.5
-nk = 2048
-nmu = 1000
+nk = 400
+nmu = 150
 
+; Multipole calculation
 [legendre]
 file = ${CODE_PATH}/legendre.py
 max_multipole = 2
+min_k_power = 0                                               ;minimum power of polynomial BB terms
+max_k_power = 2                                               ;maximum power of polynomial BB terms
 
+; Likelihood
 [pk_like]
 file = ${CODE_PATH}/pk_like.py
-pk_fname = ${DATA_PATH}/fiducial_pk_multipoles-sigma_fog2p0-sigma_par9p5-sigma_perp6p0-sigma_rec0p0-bias1p0-alpha_par1p2-alpha_perp1p2-f0p2.txt
-cov_fname = ${DATA_PATH}/Stage0/Pk_multipoles_cov_BAO_fitting_DC.v0.dat
+kmin = 0.02                                                   ;cuts data and theory for k < kmin
+kmax = 0.3                                                    ;idem for kmax
+pk_fname = ${DATA_PATH}/power_spectrum_multipoles.txt         ;pk measured multipoles, w/ cols k P0 P2 P4
+cov_fname = ${DATA_PATH}/cov_matrix.txt                       ;covariance matrix, w/ n lines x n cols
+nsamples_covariance = 989                                     ;nsamples for Hartlap correction
 
