--- a/config/bao_parameters.ini
+++ b/config/bao_parameters.ini
@@ -1,36 +1,39 @@
 [bao_parameters]
-sigma_fog = 2.
-sigma_par = 9.5
-sigma_perp = 6.0
+sigma_fog = 0.  1.  15.
+sigma_par = 0.  8.0  15.
+sigma_perp = 0.  4.0  15.
 sigma_rec = 0.
-bias = 1.
-alpha_par = 1.2
-alpha_perp = 1.2
-growth_factor = 0.2
+bias = 0.8   1.4   2.2
+alpha_par = 0.8  1.0  1.2
+alpha_perp = 0.8  1.0  1.2
+growth_factor = 0.3  0.87  1.30
 
 [systematics_parameters]
-a0_l0 = 0.
-a1_l0 = 0.
-a2_l0 = 0.
-a0_l2 = 0.
-a1_l2 = 0.
-a2_l2 = 0.
+a0_l0 = -200000  0.  200000.
+a1_l0 = -200000  0.  200000.
+a2_l0 = -200000  0.  200000.
+a0_l2 = -200000  0.  200000.
+a1_l2 = -200000  0.  200000.
+a2_l2 = -200000  0.  200000.
 
 [cosmological_parameters]
-h0 = 0.6726           ;H0 (km/s/Mpc)/100.0km/s/Mpc 
-;omega_m = 0.3141     ;density fraction for matter today
-;omega_b = 0.04       ;density fraction for baryons today
-omch2 = 0.12400       ;physical density fraction for cold dark matter today
-ombh2 = 0.01809       ;physical density fraction for baryon today
-omega_k = 0.0         ;spatial curvature
-yhe = 0.245341        ;helium mass fraction
+h0 = 0.6774
+omch2 = 0.1188
+ombh2 = 0.02230
+omnuh2 = 0.00064
+omega_k = 0.0
 
-tau = 0.08            ;reionization optical depth
+yhe = 0.24
+tau = 0.066
 
-n_s = 0.96            ;scalar spectral index
-A_s = 2.1e-9          ;scalar spectrum primordial amplitude
-k_s = 0.05            ;Power spectrum pivot scale 
-n_run = 0.0           ;running of scalar spectrum 
+n_s = 0.9667
+A_s = 2.142e-9
+k_s = 0.05
+n_run = 0.0
 
-w = -1.0              ;equation of state of dark energy
-wa = 0.0              ;equation of state of dark energy (redshift dependency)
+w = -1.0
+wa = 0.0
+
+massless_nu = 2.046
+massive_nu = 1
+
